Fixed title on mobile view for finder

--- a/src/css/finder.less
+++ b/src/css/finder.less
@@ -68,6 +68,12 @@ html {
   }
 }
 
+.navbar-brand {
+  @media (max-width: 768px) {
+    padding: 0;
+  }
+}
+
 #pageTitle {
   cursor: pointer;
   width: 100%;
